# PyPixoo

./: .gitignore  .kanbus.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING_AGENT.md  CONTRIBUTING_AGENT.template.md  PR_FAQ.md  README.md  RELEASING.md  coverage.json  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md  alerting_clock.py  black_band_chained.py  black_band_opaque.py  black_band_transparent.py  browser_mixed.py  clock_realtime.py  demo_device_settings.py  demo_display_list.py  demo_play_url_gif.py  demo_sequence_switching.py  demo_text_overlay.py  demo_three_hand_clock.py  demo_tools.py  demo_upload_sequence.py  demo_weather.py  demo_web_fonts.py  font_showcase.py  kanbus_clock.py  kanbus_clock_supervisor.py  pixooclock.py  push_letter_a.py  react_storybook_clock_info.py  scene_transitions.py  screen_test.py  single_pixel_test.py  storybook_clock.py  stripe_pattern_test.py
demos/fixtures/: letter_a.html  letter_a_192.html  single_pixel.html  stripe_pattern.html  tinytext_192.html  web_font_demo.html  web_frame.html
docs/api/: README.md  clock_capability_matrix.md  command_matrix.md  scene_acceptance_matrix.md
docs/bugs/: web-font-3px-height.md
docs/plans/: pixooclock_adaptive_palette.md
docs/sphinx/: api_browser.rst  (+12 more)
features/: animation.feature  apps.feature  browser.feature  display.feature  environment.py  pixooclock_adaptive_palette.feature  system.feature  text.feature
scripts/: build_command_matrix.py  generate_gradient_fixture.py  showdoc_export.py  verify_letter_a_capture.py
storybook-app/: .gitignore  README.md  package-lock.json  package.json  runtime.html  vite.runtime.config.ts
tests/: test_browser_helpers.py  test_cli.py  test_cli_native_extra.py  test_cli_v3.py  test_clock_demo_core.py  test_clock_palette.py  test_color.py  test_compositor.py  test_demo_three_hand_clock.py  test_font_profiles.py  test_font_render.py  test_info_dsl.py  test_info_scene.py  test_info_table_layout.py  test_kanbus_clock.py  test_pixoo_v2.py  test_raster.py  test_scene_font_registry.py  test_scene_player.py  test_scene_transitions_demo.py  test_transitions.py
(+3178 files in other folders)
