[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pypixoo"
version = "0.1.0"
description = "BDD-first Python library for Divoom Pixoo 64"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.32.0",
]
[project.optional-dependencies]
dev = [
    "behave~=1.2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
